--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,7 @@
                 <option value="R2 000,000">R2000000</option>
                 <option value="R3 000,000">R3000000</option>
             </select>
-            <button id="add" class="btn text-light">ADD LISTING</button>
+            <button id="add" class="btn text-light" onclick="addlisting">ADD LISTING</button>
             <a href="./index.html">
             <button id="return" class="btn text-light text-end">Return</button></a>
         </section>
